WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177807
AX: [ATK] aria-pressed="mixed" should be exposed via ATK_STATE_INDETERMINATE
https://bugs.webkit.org/show_bug.cgi?id=177807
Summary
AX: [ATK] aria-pressed="mixed" should be exposed via ATK_STATE_INDETERMINATE
Joanmarie Diggs
Reported
2017-10-03 04:35:20 PDT
aria-pressed="mixed" should be exposed via ATK_STATE_INDETERMINATE, as is currently done with aria-checked="mixed".
Attachments
Patch
(4.67 KB, patch)
2017-10-03 04:44 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-03 04:35:34 PDT
<
rdar://problem/34787889
>
Joanmarie Diggs
Comment 2
2017-10-03 04:44:53 PDT
Created
attachment 322509
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-04 00:33:12 PDT
Comment on
attachment 322509
[details]
Patch Clearing flags on attachment: 322509 Committed
r222833
: <
http://trac.webkit.org/changeset/222833
>
WebKit Commit Bot
Comment 4
2017-10-04 00:33:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug