AX: [ATK] aria-pressed="mixed" should be exposed via ATK_STATE_INDETERMINATE https://bugs.webkit.org/show_bug.cgi?id=177807

Reviewed by Chris Fleizach.

Source/WebCore:

Include toggle buttons in the element types for which the mixed state is checked
and exposed via ATK_STATE_INDETERMINATE if found. Also only do the role checks when
AccessibilityObject::isIndeterminate() has returned false.

Test: accessibility/gtk/aria-pressed-mixed-value.html

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(setAtkStateSetFromCoreObject):

LayoutTests:

* accessibility/gtk/aria-pressed-mixed-value-expected.txt: Added.
* accessibility/gtk/aria-pressed-mixed-value.html: Added.


Canonical link: https://commits.webkit.org/194112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222833 268f45cc-cd09-0410-ab3c-d52691b4dbfc